Refactor completo y correcciones